--- a/FakeSearch/index.html
+++ b/FakeSearch/index.html
@@ -3,36 +3,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="robots" content="noindex, nofollow">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="/jquery.highlight.js"></script>
+	<script src="/fakesearch.js"></script>
 	<link rel="stylesheet" type="text/css" href="/style.css">
-	<script type="text/javascript">
-		var is_chrome = navigator.userAgent.toLowerCase().indexOf('chrome') > -1; /* https://stackoverflow.com/questions/4565112/javascript-how-to-find-out-if-the-user-browser-is-chrome */
-		$(document).ready(function(){
-			if(is_chrome){ /* major browser + clones which *hopefuly* did not change look of search dialog */
-				$searchbar = $('#searchbar_chrome');
-				$searchbox = $('#searchbox_chrome');
-			}else{ /* second major browser + anything else (it is just proof of concept…) */
-				$searchbar = $('#searchbar_firefox');
-				$searchbox = $('#searchbox_firefox');
-			}
-			/* with just these two distinct versions i'm properly covering about 86% of visitors */
-
-			$(window).keydown(function(e){ 
-				if((e.which == "70" && (e.metaKey||e.ctrlKey))){ /* https://stackoverflow.com/questions/6680213/is-there-a-way-to-detect-find-on-the-page-searches-in-javascript */
-					e.preventDefault();
-					$searchbar.slideDown('fast');
-					$searchbox.focus()
-				}
-				if(e.keyIdentifier == "U+001B" || e.keyCode == 27){
-					e.preventDefault();
-					$searchbar.slideUp('fast');
-				}
-			});
-
-			$searchbox.change(function(){
-				alert('Obsah vyhledávacího pole je: ' + $searchbox.val() );
-			});
-		});
-	</script>
 	<style type="text/css">
 		.searchbar {
 			display: none; /* just for case the css file did not yet load */
@@ -54,9 +27,10 @@
 		<input type="button" class="navbutton_firefox button_close" id="button_close_firefox">  <!-- function will be added in later version -->
 	</div>
 	<h2>Lorem Ipsum</h2>
-	<ul>
-		<li>gdaga</li>
-		<li>gasfaf</li>
+	<ul id="passwordList">
+		<li>dolor</li>
+		<li>sit</li>
+		<li>amet</li>
 	</ul>    
 </body>
 </html>
