Adding prefill to Firefox Fakesearch box
Adding prefill to Firefox Fakesearch box

--- a/FakeSearch/index.html
+++ b/FakeSearch/index.html
@@ -20,7 +20,7 @@
 		<input type="button" class="navbutton_chrome button_close" id="button_close_chrome"> <!-- function will be added in later version -->
 	</div>
 	<div class="searchbar" id="searchbar_firefox"> <!-- firefox -->
-		<input type="text" class="searchbox" id="searchbox_firefox">
+		<input type="text" class="searchbox" id="searchbox_firefox" placeholder='Najít:'>
 		<input type="button" class="navbutton_firefox button_previous" id="button_previous_firefox"> <!-- function will be added in later version -->
 		<input type="button" class="navbutton_firefox button_next" id="button_next_firefox"> <!-- function will be added in later version -->
 		<div id="unused_icons_firefox"></div> <!-- i'm not implementing those; nobody ever uses them -->
