--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   		<h1>Metody phishingu</h1>
   		<h2>ukázky z praktické části</h2>
   		<ul style="list-style: none;">
-  			<li><a href="https://facebook.com.borysek.eu">FBHomepage on valid https</a></li>
+  			<li><a href="https://www.facebook.com.borysek.eu">FBHomepage on valid https</a></li>
   			<li><a href="https://fakesearch.borysek.eu">Fakesearch dialog</a></li>
   		</ul>
   	</div>
