--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   		<h2>ukázky z praktické části</h2>
   		<ul style="list-style: none;">
   			<li><a href="https://www.facebook.com.borysek.eu">FBHomepage on valid https</a></li>
-  			<li><a href="https://fakesearch.borysek.eu">Fakesearch dialog</a></li>
+  			<li><a href="http://fakesearch.borysek.eu">Fakesearch dialog</a></li>
   		</ul>
   	</div>
 </body>
